--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "fibers": "^5.0.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "vue-book": "^0.0.19",
+    "vue-book": "0.1.0-alpha.18",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
